objects/CAMPAIGNCAL__Campaign_Color__c.object
<CustomObject>
    <description>Associates a user-selected color with a Campaign field entity.</description>
    <fields>
        <fullName>CAMPAIGNCAL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag which denotes an active color setting.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Border_Color__c</fullName>
        <defaultValue>&quot;#3366CC&quot;</defaultValue>
        <description>The campaign calendar border color.</description>
        <label>Border Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Color__c</fullName>
        <defaultValue>&quot;999999&quot;</defaultValue>
        <description>The hexadecimal representation of the calendar color.</description>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__FieldOption__c</fullName>
        <externalId>true</externalId>
        <label>FieldOption</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Field__c</fullName>
        <description>The API name for the Campaign object field associated with the color.</description>
        <externalId>true</externalId>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Option_Label__c</fullName>
        <description>The field option&apos;s label.</description>
        <label>Option Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Option__c</fullName>
        <description>The field&apos;s option value.</description>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Text_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>The campaign calendar text color.</description>
        <label>Text Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign Color</label>
    <nameField>
        <label>Campaign Color Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>